@@ -13,7 +13,6 @@ import kr.sprouts.framework.library.security.credential.jwt.JwtAlgorithm;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class BearerTokenCredentialConsumer implements CredentialConsumer<BearerTokenSubject> {
     private final UUID id;
@@ -29,7 +28,7 @@ public class BearerTokenCredentialConsumer implements CredentialConsumer<BearerT
         this.codec = CodecType.fromName(codec).getCodecSupplier().get();
         this.jwt = JwtAlgorithm.fromName(algorithm).getJwtSupplier().get();
         this.decryptSecret = this.codec.decode(encodedDecryptSecret);
-        this.validProviderIds = validProviderIds.stream().map(UUID::fromString).collect(Collectors.toList());
+        this.validProviderIds = validProviderIds.stream().map(UUID::fromString).toList();
     }
 
     public static BearerTokenCredentialConsumer of(CredentialConsumerSpec spec) {
@@ -39,7 +38,7 @@ public class BearerTokenCredentialConsumer implements CredentialConsumer<BearerT
                 spec.getCodec(),
                 spec.getAlgorithm(),
                 spec.getEncodedSecret(),
-                spec.getValidProviders().stream().map(CredentialConsumerSpec.ValidProvider::getId).collect(Collectors.toList())
+                spec.getValidProviders().stream().map(CredentialConsumerSpec.ValidProvider::getId).toList()
         );
     }
 
@@ -65,7 +64,7 @@ public class BearerTokenCredentialConsumer implements CredentialConsumer<BearerT
     private Principal<BearerTokenSubject> principal(Claims claims) {
         return Principal.of(
                 UUID.fromString(claims.getIssuer()),
-                claims.getAudience().stream().map(UUID::fromString).collect(Collectors.toList()),
+                claims.getAudience().stream().map(UUID::fromString).toList(),
                 BearerTokenSubject.of(
                         UUID.fromString(claims.getSubject()),
                         TimeUnit.MINUTES.convert(Math.abs(claims.getExpiration().getTime() - claims.getIssuedAt().getTime()), TimeUnit.MILLISECONDS)
